# series-temporais-economia

./: README.md  pyproject.toml
data/raw/: cambio.parquet  ipca.parquet  selic.parquet
notebooks/: 01_dados.ipynb  02_eda.ipynb  03_stationarity.ipynb  04_arima.ipynb  05_multivariate.ipynb  06_backtesting.ipynb  07_ml.ipynb
src/series_eco/: __init__.py  config.py
src/series_eco/data/: loaders.py
src/series_eco/eda/: descriptive.py  plots.py  stationarity.py
src/series_eco/eval/: backtest.py
src/series_eco/models/: arima.py  features.py  ml.py  multivariate.py
tests/: test_arima.py  test_backtest.py  test_descriptive.py  test_loaders.py  test_ml.py  test_multivariate.py  test_plots.py  test_stationarity.py
